# rusty_printer_monitor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: create_release.yaml  remove_old_workflow_runs.yaml.yml  test_build.yaml
api/: Cargo.toml
api/src/: config_file.rs  main.rs  page_interface.rs  parse_printer_state.rs  printer_interface.rs  socket.rs
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js
frontend/src/widget/: add_printer.js  printer.js  printer.test.js  progress_bar.js
src/: config_file.rs  main.rs  printer_interface.rs
