[package]
name = "rusty_printer_monitor"
version = "0.1.0"
edition = "2021"
include = ["/src"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.19.2", features = ["macros"] }
tokio-stream = { version = "0.1.9" , features = ["net"] }
futures-util = "0.3.29"
once_cell = "1.18.0"
tracing-subscriber = "0.3.18"
tracing = { version = "0.1.40", features = [] }
salvo = { version = "0.59.0", features = ["websocket", "serve-static"] }
